plugin/src/test/resources/annotator/perl/unreachableCode/returnDie.code
<error descr="Unreachable code">return</error> die 'bom';